-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 22
-
Component/s: hotspot
-
b26
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8325475 | 21.0.3 | Aleksey Shipilev | P4 | Resolved | Fixed | b03 |
When doing JDK-8319777, I misplaced the _supports_cx8 = true flag setting in the method that is only called when CPU features are polled from perf counter code. We need to move the check to a proper place.
- backported by
-
JDK-8325475 Zero: Misplaced CX8 enablement flag
-
- Resolved
-
- blocks
-
JDK-8318776 Require supports_cx8 to always be true
-
- Resolved
-
- relates to
-
JDK-8319777 Zero: Support 8-byte cmpxchg
-
- Resolved
-
- links to
-
Commit
openjdk/jdk21u-dev/98e6d049
-
Commit
openjdk/jdk/06d957fd
-
Review
openjdk/jdk21u-dev/232
-
Review
openjdk/jdk/16779
(2 links to)