8320582: Zero: Misplaced CX8 enablement flag

Reviewed-by: dholmes